[package]
name = "firmware"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
embedded-hal = "0.2"
log = "0.4"
teensy4-bsp = { version = "0.4", features = ["rt"]}
teensy4-panic = "0.2"
rtic = { version = "2.0", features = ["thumbv7-backend"] }

[profile.dev]
lto = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = "fat"
opt-level = "z"
build-override = { opt-level = 0 }
